--- a/opdracht 4.2/index.html
+++ b/opdracht 4.2/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 4.1 - Font & Color</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                     gemaakt gezien. In de remake belooft Naugthy Dog meer dan alleen een audiovisueel likje verf. Zo
                     maakt
                     de game
-                    gebruik van de DualSence’s haptics, krijgt de AI een upgrade en zijn er meer dan 60
+                    gebruik van de DualSence's haptics, krijgt de AI een upgrade en zijn er meer dan 60
                     toegankelijkheidsopties. En
                     voor de sadomasochisten onder ons: er komt ook een permadeath-modus.
                 </p>
