--- a/opdracht 4.2/index.html
+++ b/opdracht 4.2/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <header>
+        <header class="header1">
             <h1>Game releases september 2022 - De 7 opvallendste games van deze maanden</h1>
 
             <p>Het afgelopen jaar heeft ons een breed aanbod aan uitstekende games geleverd, maar het kan natuurlijk
