--- a/opdracht_3.1/index.html
+++ b/opdracht_3.1/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="style.css" />
     <title>Opdracht 3</title>
   </head>
+  <body>
     <nav>
       <img src="./img/hacker.png" id="logo" />
-      <ul>
+        <ul>
         <li><a href="#">HTML/CSS</a></li>
         <li><a href="#">Javascript</a></li>
         <li><a href="#">PHP</a></li>
@@ -29,8 +30,8 @@
     <header>
     <h2>HTML/CSS</h2>
   </header>
-  <img src="./img/001.png"/> 
-  <p>
+  <img class="img1" src="./img/001.png"/> 
+  <p class="txt1">
     Lorem ipsum  dolor sit amet, consectetur adipiscing elit. Vivamua in velit placerat magna pulvinar portasit amet vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus. Proin pretium orci bibendumblandit tempor. Fusce lacina nisi quis iaculis cursus. Donec vehicula nisi eget orci pharetra, semper scelerisque nulla varius. Etiam uteros in libero codnimentum aliquet non quis leo. Pellentesque sit amet fermentum sem in ditcum leo.
   </p>
     <header>
@@ -60,5 +61,10 @@
        Vivamua in velit placerat magna pulvinar portasit amet vel purus. Suspendisse potenti. Maecenas eu purus pharetra, efficitur lorem eget, facilisis risus. Proin pretium orci bibendumblandit tempor. Fusce lacina nisi quis iaculis cursus. Donec vehicula nisi eget orci pharetra, semper scelerisque nulla varius. Etiam uteros in libero codnimentum aliquet non quis leo. Pellentesque sit amet fermentum sem in ditcum leo.
     </p>
   </main>
+  <footer>
+    <p>
+      Copyright Techniek College Rotterdam
+    </p>
+  </footer>
   </body>
 </html>
