--- a/opdracht_3.1/index.html
+++ b/opdracht_3.1/index.html
@@ -21,6 +21,7 @@
         <li><a href="#">Javascript</a></li>
         <li><a href="#">PHP</a></li>
         <li><a href="#">SQL</a></li>
+        <li id="dropdown"><a href="#">Jaar 2</a></li>
       </ul>
     </nav>
     <main>
